# 3D_Graphics

./: README.md
customizable_shader_project/: .gitmodules  CMakeLists.txt  LICENSE  README.md
customizable_shader_project/src/: CMakeLists.txt  GlobalInclude.cpp  ImpressionEngine.cpp
graphics_rendering_coursework/: README.md
graphics_rendering_coursework/HW1/: CS580HW1.sln  CS580HW1.vcxproj  CS580HW1.vcxproj.filters  rend.cpp  rend.h
graphics_rendering_coursework/HW1/Debug/: CS580HW1.exe.recipe  CS580HW1.ilk  CS580HW1.vcxproj.FileListAbsolute.txt  vc143.idb
graphics_rendering_coursework/HW1/Debug/CS580HW1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS580HW1.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
graphics_rendering_coursework/HW2/: Application2.cpp  CS580HW2.sln  CS580HW2.vcxproj  CS580HW2.vcxproj.filters  output.ppm  rend.cpp  rend.h
graphics_rendering_coursework/HW2/Debug/: CS580HW2.exe.recipe  CS580HW2.ilk  CS580HW2.vcxproj.FileListAbsolute.txt  RCa08648  vc143.idb
graphics_rendering_coursework/HW2/Debug/CS580HW2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS580HW2.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  (+1 more)
graphics_rendering_coursework/HW3/: CS580HW3.sln  CS580HW3.vcxproj  CS580HW3.vcxproj.filters  output.ppm  rend.cpp  rend.h
graphics_rendering_coursework/HW3/Debug/: CS580HW3.exe.recipe  CS580HW3.ilk  CS580HW3.vcxproj.FileListAbsolute.txt  vc143.idb
graphics_rendering_coursework/HW4/: Application4.cpp  CS580HW4.sln  CS580HW4.vcxproj  CS580HW4.vcxproj.filters  README.txt.txt  output.ppm  rend.cpp  rend.h
graphics_rendering_coursework/HW4/Debug/: CS580HW4.exe.recipe  CS580HW4.ilk  CS580HW4.vcxproj.FileListAbsolute.txt  vc143.idb
graphics_rendering_coursework/HW5/: Application.cpp  Application.h  Application5.cpp  CS580HW5.sln  CS580HW5.vcxproj  CS580HW5.vcxproj.filters  CS580HWView.cpp  output.ppm  rend.cpp  rend.h  tex_fun.cpp
graphics_rendering_coursework/HW5/Debug/: CS580HW5.exe.recipe  CS580HW5.ilk  CS580HW5.vcxproj.FileListAbsolute.txt  vc143.idb
webgl_threejs_playground/: README.md  package.json  webpack.config.js
webgl_threejs_playground/public/: index.html
webgl_threejs_playground/src/: index.ts
webgl_threejs_playground/src/cores/: Application.ts  Entity.ts
(+39 files in other folders)
